kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat
spec:
  selector:
    matchLabels:
      app: chat
      tier: backend
      track: stable
  replicas: 7
  template:
    metadata:
      labels:
        app: chat
        tier: backend
        track: stable
    spec:
      containers:
        - name: chat
          image: "kasvith/socket-io-chat:latest"
          ports:
            - name: http
              containerPort: 3000
