kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat
spec:
  selector:
    app: chat
    tier: backend
  ports:
  - protocol: TCP
    port: 3000
    targetPort: http
